sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:8: error: not found: value i
    if ( ! isSmaller(i,i+1)) {
                     ^AlgBubbleSort3:8: error: not found: value i
    if ( ! isSmaller(i,i+1)) {
                       ^AlgBubbleSort3:9: error: not found: value i
      swap(i,i+1)
           ^AlgBubbleSort3:9: error: not found: value i
      swap(i,i+1)
             ^