sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var swapped:Int =1
  var done:Int=0
  while (swapped!=0) {
    swapped=0
    
    if ( ! isSmaller(i,i+1)) {
      swap(i,i+1)
      swapped+=1
    }
    done+=1
  }
}